fix: make input values readable and add more space
Make input values readable by changing font color

Add more height to Subject input field

Add border radius to both input fields

--- a/src/styles/ContactForm.css
+++ b/src/styles/ContactForm.css
@@ -4,6 +4,7 @@
   --card-background-color: #b5b5b5;
   --card-link-color: #00ffff;
   --input-background-color: #ffffff;
+  --font-color-dark: #050505;
 }
 
 .form-holder {
@@ -21,10 +22,17 @@ form {
 
 input,
 textarea {
+  padding: 2px 0 2px 5px;
   max-width: 500px;
   width: 100%;
   border: none;
+  border-radius: 3px;
+  color: var(--font-color-dark);
   background-color: var(--input-background-color);
+}
+
+input {
+  min-height: 20px;
 }
 
 textarea {
